Fix systemd config

--- a/templates/oracledb.systemd.j2
+++ b/templates/oracledb.systemd.j2
@@ -1,7 +1,6 @@
 [Unit]
 Description=Oracle databases daemon
-After=syslog.target network.target
-After=multi-user.target
+After=network.target
 
 [Service]
 Type=forking
