--- a/templates/oracledb.systemd.j2
+++ b/templates/oracledb.systemd.j2
@@ -5,6 +5,7 @@ After=network.target
 [Service]
 Type=forking
 EnvironmentFile=/etc/sysconfig/env.oracledb
+TimeoutSec={{ db_startup_timeout }}
 ExecStart={{ oracledb.oracle_home }}/bin/dbstart {{ oracledb.oracle_home }}
 ExecStop={{ oracledb.oracle_home }}/bin/dbshut {{ oracledb.oracle_home }}
 User=oracle
